fix wrapping code block

--- a/css/style.scss
+++ b/css/style.scss
@@ -60,6 +60,11 @@ pre.highlight {
     font-size: .8em;
 }
 
+pre code {
+    word-wrap: normal;
+    overflow-wrap: normal;
+}
+
 p code {
     border-radius: .25em;
     padding: 0 .5em;
